commit linh tinh

--- a/src/main/resources/templates/common/menu.html
+++ b/src/main/resources/templates/common/menu.html
@@ -63,7 +63,7 @@
             <!--/shipping-->
 
         </div>
-        <div th:replace="common/footer :: footer"></div>
+<!--        <div th:replace="common/footer :: footer"></div>-->
     </div>
 
 </div>
