--- a/src/main/resources/templates/user/viewDetailProduct.html
+++ b/src/main/resources/templates/user/viewDetailProduct.html
@@ -235,15 +235,17 @@
 					</div><!--/recommended_items-->
 					
 				</div>
+
 			</div>
+
 		</div>
 	</section>
-	
-	
-	
 
-  
 
+
+
+
+	<div th:replace="common/footer :: footer"></div>
 	<script th:src="@{/Frontend/js/jquery.js}"></script>
 	<script th:src="@{/Frontend/js/price-range.js}"></script>
 	<script th:src="@{/Frontend/js/jquery.scrollUp.min.js}"></script>
@@ -267,5 +269,6 @@
 	  }
 	
 	</script>
+
 </body>
 </html>
