--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -17,7 +17,7 @@
 							<div class="video-gallery text-center">
 								<a href="#">
 									<div class="iframe-img" style="height: 100px" >
-										<img th:src="@{/Frontend/images/gio2.jpg}" alt="" />
+										<img th:src="@{/images/gio2.jpg}" alt="" />
 									</div>
 
 								</a>
@@ -30,7 +30,7 @@
 							<div class="video-gallery text-center">
 								<a href="#">
 									<div class="iframe-img" style="height: 100px">
-										<img th:src="@{/Frontend/images/gio3.jpg}" alt="" />
+										<img th:src="@{/images/gio3.jpg}" alt="" />
 									</div>
 
 								</a>
@@ -43,7 +43,7 @@
 							<div class="video-gallery text-center">
 								<a href="#">
 									<div class="iframe-img" style="height: 100px">
-										<img th:src="@{/Frontend/images/gio4.jpg}" alt="" />
+										<img th:src="@{/images/gio4.jpg}" alt="" />
 									</div>
 
 								</a>
@@ -56,7 +56,7 @@
 							<div class="video-gallery text-center">
 								<a href="#">
 									<div class="iframe-img" style="height: 100px">
-										<img th:src="@{/Frontend/images/gio6.jpg}" alt="" />
+										<img th:src="@{/images/gio6.jpg}" alt="" />
 									</div>
 
 								</a>
