--- a/src/main/resources/templates/common/menu.html
+++ b/src/main/resources/templates/common/menu.html
@@ -18,30 +18,30 @@
             </div>
             <!--/category-productsr-->
 
-            <div class="brands_products">
-                <!--brands_products-->
-                <h2>Category</h2>
-                <div class="brands-name">
-                    <ul class="nav nav-pills nav-stacked">
-                        <li><a href=""> <span class="pull-right">(50)</span>Nhãn Lồng Hưng Yên
-                        </a></li>
-                        <li><a href=""> <span class="pull-right">(56)</span> Thanh Long Bình Thuận
+<!--            <div class="brands_products">-->
+<!--                &lt;!&ndash;brands_products&ndash;&gt;-->
+<!--                <h2>Nhà cung cấp</h2>-->
+<!--                <div class="brands-name">-->
+<!--                    <ul class="nav nav-pills nav-stacked">-->
+<!--                        <li><a href=""> <span class="pull-right">(50)</span>-->
+<!--                        </a></li>-->
+<!--                        <li><a href=""> <span class="pull-right">(56)</span> Thanh Long Bình Thuận-->
 
-                        </a></li>
-                        <li><a href=""> <span class="pull-right">(27)</span>Vải Thiều Thanh Hà
-                        </a></li>
-                        <li><a href=""> <span class="pull-right">(32)</span> Bưởi Năm Roi
-                        </a></li>
-                        <li><a href=""> <span class="pull-right">(5)</span>Quýt Hồng Lai Vung
-                        </a></li>
-                        <li><a href=""> <span class="pull-right">(9)</span>Na Lạng Sơn
-                        </a></li>
-                        <li><a href=""> <span class="pull-right">(4)</span>Cam Cao Phong
+<!--                        </a></li>-->
+<!--                        <li><a href=""> <span class="pull-right">(27)</span>Vải Thiều Thanh Hà-->
+<!--                        </a></li>-->
+<!--                        <li><a href=""> <span class="pull-right">(32)</span> Bưởi Năm Roi-->
+<!--                        </a></li>-->
+<!--                        <li><a href=""> <span class="pull-right">(5)</span>Quýt Hồng Lai Vung-->
+<!--                        </a></li>-->
+<!--                        <li><a href=""> <span class="pull-right">(9)</span>Na Lạng Sơn-->
+<!--                        </a></li>-->
+<!--                        <li><a href=""> <span class="pull-right">(4)</span>Cam Cao Phong-->
 
-                        </a></li>
-                    </ul>
-                </div>
-            </div>
+<!--                        </a></li>-->
+<!--                    </ul>-->
+<!--                </div>-->
+<!--            </div>-->
             <!--/brands_products-->
 
             <div class="price-range">
@@ -50,8 +50,8 @@
                 <div class="well">
                     <input type="text" class="span2" value="" data-slider-min="0"
                            data-slider-max="600" data-slider-step="5"
-                           data-slider-value="[250,450]" id="sl2"><br /> <b>$ 0</b>
-                    <b class="pull-right">$ 600</b>
+                           data-slider-value="[250,450]" id="sl2"><br /> <b>30.000 VND</b>
+                    <b class="pull-right">600.000 VND</b>
                 </div>
             </div>
             <!--/price-range-->
