commit linh tinh v4

--- a/src/main/resources/templates/common/menu.html
+++ b/src/main/resources/templates/common/menu.html
@@ -3,67 +3,52 @@
     <div class="col-sm-3">
         <div class="left-sidebar">
             <h2>Brands</h2>
-            <div class="panel-group category-products" id="accordian" style="height: 200px">
+            <div class="panel-group category-products" id="accordian">
                 <!--category-productsr-->
                 <div th:each="category : ${listCategory}" class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <li> <a th:href="@{'/home/'+${category.name}}" th:text="${category.name}"></a></li>
-
+                            <li><a th:href="@{'/home/'+${category.name}}" th:text="${category.name}"></a></li>
                         </h4>
                     </div>
                 </div>
 
 
             </div>
-            <!--/category-productsr-->
-
-<!--            <div class="brands_products">-->
-<!--                &lt;!&ndash;brands_products&ndash;&gt;-->
-<!--                <h2>Nhà cung cấp</h2>-->
-<!--                <div class="brands-name">-->
-<!--                    <ul class="nav nav-pills nav-stacked">-->
-<!--                        <li><a href=""> <span class="pull-right">(50)</span>-->
-<!--                        </a></li>-->
-<!--                        <li><a href=""> <span class="pull-right">(56)</span> Thanh Long Bình Thuận-->
-
-<!--                        </a></li>-->
-<!--                        <li><a href=""> <span class="pull-right">(27)</span>Vải Thiều Thanh Hà-->
-<!--                        </a></li>-->
-<!--                        <li><a href=""> <span class="pull-right">(32)</span> Bưởi Năm Roi-->
-<!--                        </a></li>-->
-<!--                        <li><a href=""> <span class="pull-right">(5)</span>Quýt Hồng Lai Vung-->
-<!--                        </a></li>-->
-<!--                        <li><a href=""> <span class="pull-right">(9)</span>Na Lạng Sơn-->
-<!--                        </a></li>-->
-<!--                        <li><a href=""> <span class="pull-right">(4)</span>Cam Cao Phong-->
-
-<!--                        </a></li>-->
-<!--                    </ul>-->
-<!--                </div>-->
-<!--            </div>-->
+            <div class="brands_products">
+                <!--brands_products-->
+                <h2>Nhà cung cấp</h2>
+                <div class="brands-name">
+                    <ul class="nav nav-pills nav-stacked">
+                        <li><a href=""> <span class="pull-right">(16)</span> Công ty TNHH Hưng Thịnh
+                        </a></li>
+                        <li><a href=""> <span class="pull-right">(5)</span> Công ty TNHH Long Thành
+                        </a></li>
+                    </ul>
+                </div>
+            </div>
             <!--/brands_products-->
 
             <div class="price-range">
                 <!--price-range-->
                 <h2>Price Range</h2>
                 <div class="well">
-                    <input type="text" class="span2" value="" data-slider-min="0"
-                           data-slider-max="600" data-slider-step="5"
-                           data-slider-value="[250,450]" id="sl2"><br /> <b>30.000 VND</b>
+                    <input type="text" class="span2" value="" data-slider-min="30000"
+                           data-slider-max="600000" data-slider-step="5"
+                           data-slider-value="[250000,450000]" id="sl2"><br/> <b>30.000 VND</b>
                     <b class="pull-right">600.000 VND</b>
                 </div>
             </div>
             <!--/price-range-->
 
-            <div class="shipping text-center" style="height: 300px; background-color: white">
-                <!--shipping-->
-                <img th:src="@{/Frontend/images/mua.jpg}" alt="" style="height: 250px;padding-top: 25px"/>
-            </div>
+            <!--            <div class="shipping text-center" style="height: 300px; background-color: white">-->
+            <!--                &lt;!&ndash;shipping&ndash;&gt;-->
+            <!--                <img th:src="@{/Frontend/images/mua.jpg}" alt="" style="height: 250px;padding-top: 25px"/>-->
+            <!--            </div>-->
             <!--/shipping-->
 
         </div>
-<!--        <div th:replace="common/footer :: footer"></div>-->
+        <!--        <div th:replace="common/footer :: footer"></div>-->
     </div>
 
 </div>
