--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -71,7 +71,7 @@
                                     <div class="product-overlay">
                                         <div class="overlay-content">
                                             <h2 th:text="${#numbers.formatCurrency(product.price)}"></h2>
-                                            <p th:text="${product.name}"></p>
+                                            <h4 th:text="${product.name}"></h4>
                                             <a th:href="@{'/cart/add/' + ${product.id}}"
                                                class="btn btn-default add-to-cart"><i
                                                     class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
@@ -80,7 +80,7 @@
                                 </div>
                                 <div class="choose" >
                                     <ul class="nav nav-pills nav-justified" >
-                                        <li ><a th:href="@{'/detailproduct/' + ${product.id}}" style="width: 100px  ><i class="fa fa-plus-square"></i>Xem chi tiết</a></li>
+                                        <li ><a th:href="@{'/detailproduct/' + ${product.id}}" style="width: 100px"  ><i class="fa fa-plus-square"></i>Xem chi tiết</a></li>
                                     </ul>
                                 </div>
                             </div>
