--- a/src/main/resources/templates/user/viewDetailProduct.html
+++ b/src/main/resources/templates/user/viewDetailProduct.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
-<title>Home | E-Shopper</title>
+<title>Home | Suit</title>
 <link th:href="@{/Frontend/css/bootstrap.min.css}" rel="stylesheet">
 <link th:href="@{/Frontend/css/font-awesome.min.css}" rel="stylesheet">
 <link th:href="@{/Frontend/css/prettyPhoto.css}" rel="stylesheet">
@@ -13,9 +13,6 @@
 <link th:href="@{/Frontend/css/animate.css}" rel="stylesheet">
 <link th:href="@{/Frontend/css/main.css}" rel="stylesheet">
 <link th:href="@{/Frontend/css/responsive.css}" rel="stylesheet">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-		  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 			crossorigin="anonymous"></script>
@@ -29,81 +26,73 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <link rel="shortcut icon" href="@{Frontend/images/ico/favicon.ico}">
-<link rel="apple-touch-icon-precomposed" sizes="144x144"
-	th:href="@{/Frontend/images/ico/apple-touch-icon-144-precomposed.png}">
-<link rel="apple-touch-icon-precomposed" sizes="114x114"
-	th:href="@{/Frontend/images/ico/apple-touch-icon-114-precomposed.png}">
-<link rel="apple-touch-icon-precomposed" sizes="72x72"
-	th:href="@{/Frontend/images/ico/apple-touch-icon-72-precomposed.png}">
-<link rel="apple-touch-icon-precomposed"
-	th:href="@{/Frontend/images/ico/apple-touch-icon-57-precomposed.png}">
 </head>
 
 <body>
 	<div th:replace="common/header :: header"></div>
-	<div th:replace="common/slider :: slider"></div>
-	
+<!--	<div th:replace="common/slider :: slider"></div>-->
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-12">
+				<div class="carousel-inner">
+					<div class="carousel-item active ">
+						<img th:src="@{/images/slide 4.jpg}" alt="Cheery">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<section style="padding-top: 50px">
 		<div class="container" >
 			<div class="col-sm-12">
 				<div th:replace="common/menu :: menu">
-
 				</div>
-
-
 				<div class="col-sm-9 padding-right">
 					<div class="product-details"><!--product-details-->
 						<div class="col-sm-5">
 							<div class="view-product">
 								<img th:src="@{'/images/' + ${product.url_image} }" alt="" />
-								<h3>Ảnh</h3>
+								<h4>Ảnh</h4>
 							</div>
-							<div id="similar-product" class="carousel slide" data-ride="carousel">
-								
-								  <!-- Wrapper for slides -->
-								    <div class="carousel-inner">
-										<div class="item active">
-										  <a href=""><img src="images/product-details/similar1.jpg" alt=""></a>
-										  <a href=""><img src="images/product-details/similar2.jpg" alt=""></a>
-										  <a href=""><img src="images/product-details/similar3.jpg" alt=""></a>
-										</div>
-																														
-									</div>
+<!--							<div id="similar-product" class="carousel slide" data-ride="carousel">-->
 
-								  <!-- Controls -->
-								  <a class="left item-control" href="#similar-product" data-slide="prev">
-									<i class="fa fa-angle-left"></i>
-								  </a>
-								  <a class="right item-control" href="#similar-product" data-slide="next">
-									<i class="fa fa-angle-right"></i>
-								  </a>
-							</div>
+<!--								  &lt;!&ndash; Wrapper for slides &ndash;&gt;-->
+<!--								    <div class="carousel-inner">-->
+<!--										<div class="item active">-->
+<!--										  <a href=""><img src="images/product-details/similar1.jpg" alt=""></a>-->
+<!--										  <a href=""><img src="images/product-details/similar2.jpg" alt=""></a>-->
+<!--										  <a href=""><img src="images/product-details/similar3.jpg" alt=""></a>-->
+<!--										</div>-->
+
+<!--									</div>-->
+
+<!--								  &lt;!&ndash; Controls &ndash;&gt;-->
+<!--								  <a class="left item-control" href="#similar-product" data-slide="prev">-->
+<!--									<i class="fa fa-angle-left"></i>-->
+<!--								  </a>-->
+<!--								  <a class="right item-control" href="#similar-product" data-slide="next">-->
+<!--									<i class="fa fa-angle-right"></i>-->
+<!--								  </a>-->
+<!--							</div>-->
 
 						</div>
 						<div class="col-sm-7">
 							<div class="product-information"><!--/product-information-->
 								<img src="images/product-details/new.jpg" class="newarrival" alt="" />
-								<h2 th:text="${product.name}"></h2>								
-								
-								
+								<h2 th:text="${product.name}"></h2>
 								 <form th:action="@{ '/cart/addProduct/' + ${product.id} }" method="get">
 								   <span>
 									<span th:text="${#numbers.formatCurrency(product.price)}"></span>
 									<label>Số lượng</label>
-									
 									<input name="number" type="text" value="1" />
 									<button type="submit" class="btn btn-fefault cart" >
 										<i class="fa fa-shopping-cart"></i>
 										Mua sản phẩm
 									</button>
 								   </span>
-								 
-								 
 								 </form>
-								
-								
-								<p><b>Trạng thái: </b> Còn hàng</p>
-																
+<!--								<h5 th:text="${product.untit}"></h5>-->
+								<h5><b>Trạng thái: </b> Còn hàng</h5>
 							</div><!--/product-information-->
 						</div>
 					</div><!--/product-details-->
@@ -114,18 +103,17 @@
 								<li class="active"><a href="#reviews" data-toggle="tab">Nhận xét</a></li>
 							</ul>
 						</div>
-						<div class="tab-content">																
+
+						<div class="tab-content">
 							<div class="tab-pane fade active in" id="reviews" >
 								<div class="col-sm-12">
 									<ul>
 										<li><a href=""><i class="fa fa-user" th:text="${product.createdBy}"></i></a></li>
 										<li><a href=""><i class="fa fa-clock-o"  th:text="${#dates.format(product.createdDate, 'HH:mm')}"></i></a></li>
 										<li><a href=""><i class="fa fa-clock-o"  th:text="${#dates.format(product.createdDate, 'dd-MM-yyyy')}"></i></a></li>
-
 									</ul>
 									<p th:text="${product.name}"></p>
 									<p><b>Nhận xét</b></p>
-									
 									<form action="#">
 										<span>
 											<input type="text" placeholder="Your Name"/>
@@ -139,7 +127,6 @@
 									</form>
 								</div>
 							</div>
-							
 						</div>
 					</div><!--/category-tab-->
 
@@ -153,9 +140,9 @@
 										<div class="product-image-wrapper">
 											<div class="single-products">
 												<div class="productinfo text-center">
-													<img src="images/home/recommend1.jpg" alt="" />
-													<h2>$56</h2>
-													<p>Easy Polo Black Edition</p>
+													<img th:src="@{/images/le.png}" alt="" />
+													<h2>56.000 VND</h2>
+													<p>Hoa quả nhập khẩu</p>
 													<button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
 												</div>
 											</div>
@@ -165,9 +152,9 @@
 										<div class="product-image-wrapper">
 											<div class="single-products">
 												<div class="productinfo text-center">
-													<img src="images/home/recommend2.jpg" alt="" />
-													<h2>$56</h2>
-													<p>Easy Polo Black Edition</p>
+													<img th:src="@{/images/nho.png}" alt="" />
+													<h2>56.000 VND</h2>
+													<p>Hoa quả nhập khẩu</p>
 													<button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
 												</div>
 											</div>
@@ -177,9 +164,9 @@
 										<div class="product-image-wrapper">
 											<div class="single-products">
 												<div class="productinfo text-center">
-													<img src="images/home/recommend3.jpg" alt="" />
-													<h2>$56</h2>
-													<p>Easy Polo Black Edition</p>
+													<img th:src="@{/images/anhDuaHau.jpg}" alt="" />
+													<h2>56.000 VND</h2>
+													<p>Hoa quả nhập khẩu</p>
 													<button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
 												</div>
 											</div>
@@ -191,9 +178,9 @@
 										<div class="product-image-wrapper">
 											<div class="single-products">
 												<div class="productinfo text-center">
-													<img src="images/home/recommend1.jpg" alt="" />
-													<h2>$56</h2>
-													<p>Easy Polo Black Edition</p>
+													<img th:src="@{/images/anhDao.jpg}" alt="" />
+													<h2>56.000 VND</h2>
+													<p>Hoa quả nhập khẩu</p>
 													<button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
 												</div>
 											</div>
@@ -203,9 +190,9 @@
 										<div class="product-image-wrapper">
 											<div class="single-products">
 												<div class="productinfo text-center">
-													<img src="images/home/recommend2.jpg" alt="" />
-													<h2>$56</h2>
-													<p>Easy Polo Black Edition</p>
+													<img th:src="@{/images/anhThanhLong.jpg}" alt="" />
+													<h2>56.000 VND</h2>
+													<p>Hoa quả nhập khẩu</p>
 													<button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
 												</div>
 											</div>
@@ -215,9 +202,9 @@
 										<div class="product-image-wrapper">
 											<div class="single-products">
 												<div class="productinfo text-center">
-													<img src="images/home/recommend3.jpg" alt="" />
-													<h2>$56</h2>
-													<p>Easy Polo Black Edition</p>
+													<img th:src="@{/images/anhXoai.jpg}" alt="" />
+													<h2>56.000 VND</h2>
+													<p>Hoa quả nhập khẩu</p>
 													<button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
 												</div>
 											</div>
