--- a/src/main/resources/templates/common/headeradmin.html
+++ b/src/main/resources/templates/common/headeradmin.html
@@ -55,20 +55,12 @@
     <a href="index3.html" class="brand-link">
       <img th:src="@{/Backend/dist/img/AdminLTELogo.png}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
            style="opacity: .8">
-      <span class="brand-text font-weight-light">Admin</span>
+      <span class="brand-text font-weight-light">ADMIN</span>
     </a>
 
     <!-- Sidebar -->
     <div class="sidebar">
       <!-- Sidebar user panel (optional) -->
-      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
-          <img th:src="@{/Frontend/images/BANER1.jpg}" class="img-circle elevation-2" alt="User Image">
-        </div>
-        <div class="info">
-          <a href="#" class="d-block">Nhom 11</a>
-        </div>
-      </div>
 
       <!-- Sidebar Menu -->
       <nav class="mt-2">
@@ -86,10 +78,7 @@
           <li class="nav-item">
             <a th:href="@{/admin/QuanLyTaiKhoan/DanhSach}" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
-              <p>
-                Quản Lí Tài Khoản
-                <span class="right badge badge-danger">New</span>
-              </p>
+              <p>Quản Lí Tài Khoản</p>
             </a>
           </li>
           <li class="nav-item has-treeview">
@@ -98,7 +87,6 @@
               <p>
                 Quản Lý Vai Trò
                 <i class="fas fa-angle-left right"></i>
-                <span class="badge badge-info right">6</span>
               </p>
             </a>
           </li>
