--- a/src/main/resources/templates/user/searchInput.html
+++ b/src/main/resources/templates/user/searchInput.html
@@ -2,7 +2,7 @@
 	<div class="product-image-wrapper">
 		<div class="single-products">
 			<div class="productinfo text-center">
-				<img th:src="@{'/images/' + ${product.urlImage} }"
+				<img th:src="@{'/images/' + ${product.url_image} }"
 					alt="Khong hien hinh anh" />
 				<!-- <h2 th:text="${product.price}"></h2> -->
 				<h2 th:text="${#numbers.formatCurrency(product.price)}"></h2>
@@ -20,12 +20,9 @@
 				</div>
 			</div>
 		</div>
-		<div class="choose">
-			<ul class="nav nav-pills nav-justified">
-				<li><a href=""><i class="fa fa-plus-square"></i>Add to
-						wishlist</a></li>
-				<li><a href=""><i class="fa fa-plus-square"></i>Add to
-						compare</a></li>
+		<div class="choose" >
+			<ul class="nav nav-pills nav-justified" >
+				<li ><a th:href="@{'/detailproduct/' + ${product.id}}" style="width: 100px"  ><i class="fa fa-plus-square"></i>Xem chi tiết</a></li>
 			</ul>
 		</div>
 	</div>
