commit linh tinh

--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>THATFRUIT Error</title>
 </head>
 <body>
-   <h1 style="color:red;">403, Không có quyền truy cập</h1>
+   <div class="productinfo text-center">
+      <img th:src="@{'/Frontend/images/404/403.jpg'}">
+      <h1 style="color:red;">403, Bạn không có quyền truy cập</h1>
+   </div>
 </body>
 </html>
