--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>THATFRUIT Error</title>
 </head>
 <body>
     <h1 style="color:red;">404, Không tìm thấy trang</h1>
