--- a/src/main/resources/templates/common/headeradmin.html
+++ b/src/main/resources/templates/common/headeradmin.html
@@ -5,7 +5,7 @@
         <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="index3.html" class="nav-link">Home</a>
+        <a href="/home" class="nav-link">Home</a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
         <a href="#" class="nav-link">Contact</a>
@@ -66,7 +66,7 @@
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <li class="nav-item has-treeview menu-open">
-            <a href="#" class="nav-link active">
+            <a href="/admin" class="nav-link active">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
                 Trang chủ
@@ -103,7 +103,7 @@
             <a th:href="@{/admin/QuanLyDanhMuc/DanhSach}" class="nav-link">
               <i class="nav-icon fas fa-tree"></i>
               <p>
-                Quản Lý Danh Mục
+                Danh Mục Xuất Xứ
                 <i class="fas fa-angle-left right"></i>
               </p>
             </a>       
