--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>THATFRUIT Login</title>
     <link th:href="@{/Frontend/css/login.css}" rel="stylesheet">
 </head>
 <body>
