--- a/src/main/resources/templates/Register.html
+++ b/src/main/resources/templates/Register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>THATFRUIT Register</title>
     <link rel="stylesheet" href="../Frontend/css/Register.css">
 </head>
 <body>
